--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,8 @@
 {
-  "routes": [
+  "builds": [
     {
-      "src": "/.*",
-      "dest": "index.js"
+      "src": "./index.js",
+      "use": "@vercel/node"
     }
   ]
 }
